<resources>
    <string name="app_name">TrabalhoAndroid</string>
    <string-array name="spiner_edittext">
        <item>Empresa</item>
        <item>Estagiario</item>
    </string-array>

    <string name="anunciante">%1$s</string>
    <string name="areaVaga">Área da vaga: %1$s</string>
    <string name="descricao">%1$s</string>
    <string name="text_localidade">Localidade: %1$s</string>
    <string name="dataTermino">Data de termino da vaga: %1$s</string>
    <string name="valorRemuneracao">Valor da Remuneração: %1$s</string>
    <string name="emailContato">E-mail de Contato: %1$s</string>
    <string name="telefoneContato">Telefone de Contato: %1$s</string>

    <!-- Tela Login. -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="btnentrar">Entrar</string>
    <string name="btncadastrarlogin">Cadastrar</string>

    <!-- Tela Cadastro. -->

    <string name="cadastro">    Cadastro</string>
    <string name="nomedeusuario">   Nome de usuário</string>
    <string name="emailcadastro">   Email</string>
    <string name="definaperfil">Defina seu perfil</string>
    <string name="senhacadastro">   Senha</string>
    <string name="confirmesenha">   Confirme sua senha</string>
    <string name="btncadastrar">Cadastrar</string>
    <string name="btncancelar">Cancelar</string>

    <!-- Tela Card. -->

    <string name="anunciantecard">Anunciante: %1$s</string>
    <string name="areadavagacard">Área da vaga: %1$s</string>
    <string name="localidadecard">Localidade: %1$s</string>
    <string name="datacard">Data termino da vaga: %1$s</string>
    <string name="btnvervagacard">Ver Vaga</string>

    <!-- Tela Editar Perfil. -->
    <string name="editarperfil">Editar</string>
    <string name="editarnome">  Nome</string>
    <string name="editaremail"> Email</string>
    <string name="btneditar">Editar</string>
    <string name="btneditarcancelar">Cancelar</string>

    <!-- Tela Cadastro Anuncio. -->


    <string name="areaVagaCadastro"> Área da vaga</string>
    <string name="descricaoCadastro"> Descrição</string>
    <string name="remuneracaocadastro"> Valor</string>
    <string name="valor"> R$</string>
    <string name="text_localidadeCadastro"> Localidade</string>
    <string name="emailContatoCadastro"> E-mail de Contato</string>
    <string name="telefoneContatoCadastro"> Telefone de Contato</string>
    <string name="anuncianteCadastro">Nome da empresa</string>
    <string name="datainicioCadastro"> Data de Inicio</string>
    <string name="datafinalCadastro"> Data de vencimento</string>


    <!-- Tela de Perfil -->

    <string name="perfil">Perfil</string>
    <string name="btnsair">Sair</string>
    <string name="btntirarfoto">Tirar Foto</string>
    <string name="nomeperfil">Nome: Juan</string>
    <string name="emailperfil">Email: Juan@gmail.com</string>
    <string name="btneditarperfil">Editar</string>

    <!-- Tela Editar Cadastro Anuncio. -->
    <string name="areaVagaCadastroed">  TI</string>
    <string name="descricaoCadastroed">  Precisamos de pessoas com ex em kotlin</string>
    <string name="remuneracaocadastroed">   Valor</string>
    <string name="valored">  R$ 2.000,00</string>
    <string name="text_localidadeCadastroed">  São Paulo</string>
    <string name="emailContatoCadastroed">  microsoft@hotmail.com</string>
    <string name="telefoneContatoCadastroed">  (11)99555-1211</string>
    <string name="anuncianteCadastroed">  Microsoft</string>
    <string name="datainicioCadastroed">  06/04/2023</string>
    <string name="datafinalCadastroed">  06/06/2023</string>
    <string name="emailPerfil">Email: %1$s</string>
    <string name="nomePerfil">Nome: %1$s</string>
    <string name="NomedaEmpresa">Nome da empresa: %1$s</string>
    <string name="area_da_vaga">Área da vaga: %1$s</string>
    <string name="localidade">Localidade: %1$s</string>
    <string name="data_termino_da_vaga">Data termino da vaga: %1$s</string>
    <string name="remuneracao">Remuneração: %1$s</string>
    <string name="e_mail_de_contato">E-mail de contato: %1$s</string>
    <string name="telefone">Telefone: %1$s</string>
    <string name="perfil_estagiario">Perfil</string>
    <string name="sair">Sair</string>
    <string name="foto_estagiario">Foto estagiario</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="nome_estagiario">Nome: %1$s</string>
    <string name="email_estagiario">Email: %1$s</string>
    <string name="editar_estagiario">Editar</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="recuperar_senha">Esqueceu senha?</string>
    <string name="recuperar">Recuperar Senha</string>
    <string name="btnEnviarecuperar">Enviar</string>
    <string name="btnvoltarrecuperar">Voltar</string>
    <string name="editar_vaga">Editar Vaga</string>
    <string name="nome_da_empresa_editar">Nome da empresa</string>
    <string name="descricao_editar">Descrição</string>
    <string name="rea_da_vaga_editar">Área da vaga</string>
    <string name="valor_editar">Valor</string>
    <string name="localidade_editar">Localidade</string>
    <string name="e_mail_de_contato_editar">E-mail de contato</string>
    <string name="telefone_de_contato_editar">Telefone de contato</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="minhas_vagas">Minhas vagas</string>
    <string name="perfil_user_empresa">Perfil</string>
    <string name="sair_perfil_empresa">Sair</string>
    <string name="tirar_foto_empresa">Tirar foto</string>
    <string name="editar_empresa">Editar</string>
    <string name="detalhes_da_vaga">Detalhes da vaga</string>
    <string name="clique_e_envie_um_e_mail">Clique e envie um e-mail</string>
    <string name="voltar">Voltar</string>
    <string name="editar_minhas_vagas">Editar</string>
    <string name="excluir_minhas_vagas">Excluir</string>
    <string name="cadastro_de_anuncios">Cadastro de Anuncios</string>
    <string name="area_minha_vaga">Área da vaga</string>
    <string name="anunciar_cadastro_anuncio">Anunciar</string>
    <string name="texto_recuperar_senha">Digite seu E-mail para fazer a recuperação de senha.</string>
    <string name="foto_estagiario_desc">Foto estagiario</string>
</resources>