<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar Vaga"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/area_conhecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/areaVagaCadastro"

            android:layout_below="@+id/title_textview" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/areaVagaCadastroed"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/disc_vaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricaoCadastro"

            android:layout_below="@+id/area_conhecimento" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/descricaoCadastroed"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valor_remunecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remuneracaocadastro"
            android:layout_below="@+id/disc_vaga" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/valored"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/local_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_localidadeCadastro"
            android:layout_below="@+id/valor_remunecao" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_localidadeCadastroed"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailContatoCadastro"
            android:layout_below="@+id/local_edittext" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/emailContatoCadastroed"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefonee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefoneContatoCadastro"
            android:layout_below="@+id/email_edittext" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="phone"
                android:text="@string/telefoneContatoCadastroed"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/anuciante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/anuncianteCadastro"
            android:layout_below="@+id/telefonee"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/anuncianteCadastroed"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datainicioCadastro"
            android:layout_below="@+id/anuciante">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInicioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_margin="8dp"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:text="@string/datainicioCadastroed"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datafinalCadastro"
            android:layout_below="@+id/date_inicio">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateFinalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_margin="8dp"
                android:text="@string/datafinalCadastroed"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botaoEditarVagaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/date_final"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/botaoVoltarEditarVaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/botaoEditarVagaEmpresa"
            />
    </RelativeLayout>
</ScrollView>