<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        tools:context=".MainActivity"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/branco">


        <LinearLayout
            android:background="@color/branco"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp">


            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/nomeEmpresaMinhasVagas"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/NomedaEmpresa"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textColor="@color/preto"
                />

            <TextView
                android:id="@+id/areaDaVagaMinhasVagas"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:text="@string/area_da_vaga"
                android:textSize="14sp"
                android:textColor="@color/preto"

                />

            <TextView
                android:id="@+id/localidadeMinhasVagas"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/localidade"
                android:textColor="@color/preto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dataTerminoMinhasVagas"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/data_termino_da_vaga"
                android:textColor="@color/preto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valorRemuneracaoMinhasVagas"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/remuneracao"
                android:textColor="@color/preto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/emailContatoMinhasVagas"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/e_mail_de_contato"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/telefoneContatoMinhasVagas"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/telefone"
                android:textColor="@color/preto"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="?attr/borderlessButtonStyle"
                    android:backgroundTint="@color/md_theme_light_tertiary"
                    android:id="@+id/editarVagasEmpresa"
                    android:layout_width="99dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/editar_minhas_vagas"
                    android:textColor="@color/branco" />

                <com.google.android.material.button.MaterialButton
                    style="?attr/borderlessButtonStyle"
                    android:backgroundTint="@color/md_theme_light_error"
                    android:id="@+id/excluirvaga"
                    android:layout_width="99dp"
                    android:layout_height="40dp"
                    android:text="@string/excluir_minhas_vagas"
                    android:textColor="@color/branco" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>