<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardCornerRadius="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seed">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="8dp">
            <TextView
                android:layout_margin="8dp"
                android:id="@+id/anunciante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anunciante"
                android:textColor="@color/preto"
                android:textSize="30sp"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/descricaoVaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/descricao"
                android:textSize="14sp"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"

                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/md_theme_light_surfaceTint"
                />
            <TextView
                android:id="@+id/areaVaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/areaVaga"
                android:textSize="14sp"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/baseline_content_paste_24"

                />

            <TextView
                android:id="@+id/localidadeVaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_localidade"
                android:textSize="14sp"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/baseline_locationnn_on_24"

                />
            <TextView
                android:id="@+id/dataTerminoDaVaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/dataTermino"
                android:textSize="14sp"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/baseline_date_range_24"
                />
            <TextView
                android:id="@+id/remuneracaoEstagio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/valorRemuneracao"
                android:textSize="14sp"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/baseline_attach_money_24"

                />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/emailContato"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/baseline_email_24"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                />
            <TextView
                android:id="@+id/telefoneContatoEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/telefoneContato"
                android:textColor="@color/preto"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/baseline_local_phone_24"

                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/md_theme_light_surfaceTint"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/enviarEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clique_e_envie_um_e_mail"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:textColor="@color/branco"
                android:backgroundTint="@color/md_theme_light_primary"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/voltarBotao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:textColor="@color/branco"
                android:backgroundTint="@color/md_theme_light_primary"
                style="?attr/borderlessButtonStyle" />
        </LinearLayout>
</ScrollView>
</com.google.android.material.card.MaterialCardView>
