<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/seed"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil_estagiario"
            android:textSize="30sp"
            android:fontFamily="@font/open_sans_bold"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sairBotao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:backgroundTint="@color/md_theme_light_error"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imagemPerfilEstagiario"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Perfil"
            android:src="@drawable/logoperfil"
            android:contentDescription="@string/foto_estagiario" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botaoTirarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar_foto"
            android:drawableEnd="@drawable/baseline_camera_alt_24"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imagemPerfilEstagiario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nomeEstagiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_estagiario"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/md_theme_dark_secondary"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/botaoTirarFoto"
            android:fontFamily="@font/roboto_medium"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailEstagiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_estagiario"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:background="@color/md_theme_dark_secondary"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nomeEstagiario"
            android:fontFamily="@font/roboto_medium"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/editarEstagiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_estagiario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEstagiario"/>


    </androidx.constraintlayout.widget.ConstraintLayout>